# macchat

./: .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  CRYPTO_BUILD_COMPLETE.md  DEPLOYMENT.md  IMPLEMENTATION_ROADMAP.md  Makefile  P2P_ARCHITECTURE.md  P2P_QUICK_START.md  PHASE_1_2_COMPLETE.md  PROJECT_STATUS_MASTER.md  README_SECURITY_COMPLETE.md  SECURITY.md  SECURITY_ARSENAL.md  SECURITY_CHECKLIST.md  SECURITY_FEATURES.md  SECURITY_IMPLEMENTATION.md  SPRINT_SUMMARY.md  TECHNICAL_SPEC.md  docker-compose.yml  generate-certs.sh  nginx.conf
crypto/: Cargo.toml  README.md
crypto/benches/: encryption_benchmarks.rs
crypto/src/: encryption.rs  key_exchange.rs  lib.rs  post_quantum.rs  utils.rs
docs/: README.md
identity-service/internal/services/: encryption.go
p2p-network/: Cargo.toml
p2p-network/src/: lib.rs
shared/go/crypto/: e2e.go
shared/go/middleware/: rate_limit.go
shared/go/validation/: validator.go
