[package]
name = "chakchat-crypto"
version = "1.0.0"
edition = "2021"
description = "Triple-Layer Encryption Core for ChakChat - Most Secure Messenger"
license = "MIT"
authors = ["ChakChat Team"]

[dependencies]
# Encryption
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
cipher = "0.4"

# Key Derivation & Hashing
hkdf = "0.12"
sha2 = "0.10"
scrypt = "0.10"
hmac = "0.12"

# Elliptic Curve
curve25519-dalek = { version = "4.1", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
x25519-dalek = "2.0"

# Random
rand = "0.8"
getrandom = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
hex = "0.4"
thiserror = "1.0"
zeroize = { version = "1.6", features = ["derive"] }
chrono = "0.4"

# Testing
criterion = "0.5"

[dev-dependencies]
tokio-test = "0.4"
hex-literal = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
overflow-checks = true
panic = "abort"

[profile.test]
opt-level = 2
overflow-checks = true

[[bench]]
name = "encryption_benchmarks"
harness = false
